--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "preview": "vite preview"
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "lint": "npx eslint src test",
+        "lint:fix": "npm run lint -- --fix",
+        "prettier": "npx prettier src test --check",
+        "prettier:fix": "npm run prettier -- --write"
     },
     "devDependencies": {
-      "vite": "^4.4.9"
+        "eslint": "^8.50.0",
+        "eslint-config-standard": "^17.1.0",
+        "prettier": "3.0.3",
+        "tailwindcss": "^3.3.3",
+        "vite": "^4.4.9"
     }
-  }
-  
+}
