Got linter and formatter setup

--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-    "name": "go-go-htmx",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "build": "npm run tailwind:build",
-        "lint": "npx eslint **/*.js",
-        "lint:fix": "npm run lint -- --fix",
-        "prettier": "npx prettier src --check",
-        "prettier:fix": "npm run prettier -- --write",
-        "tailwind:build": "npx tailwindcss -i ./src/assets/css/main.css -o ./src/assets/css/output.min.css --minify"
-    },
-    "devDependencies": {
-        "eslint": "^8.50.0",
-        "eslint-config-standard": "^17.1.0",
-        "prettier": "^3.0.3",
-        "tailwindcss": "^3.3.3"
-    }
+  "name": "go-go-htmx",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "build": "npm run tailwind:build",
+    "lint": "npx eslint **/*.js **/*.cjs",
+    "lint:fix": "npm run lint -- --fix",
+    "prettier": "npx prettier **/*.js **/*.cjs **/*.css **/*.html **/*.json --check",
+    "prettier:fix": "npm run prettier -- --write",
+    "format": "npm run lint && npm run prettier",
+    "format:fix": "npm run lint:fix && npm run prettier:fix",
+    "tailwind:build": "npx tailwindcss -i ./src/assets/css/main.css -o ./src/assets/css/output.min.css --minify"
+  },
+  "devDependencies": {
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.3"
+  }
 }
